--- a/index.html
+++ b/index.html
@@ -9,27 +9,23 @@
 </head>
 <body>
   <h1>Task Rejection Letter</h1>
-  <p>Generate a helpful message saying that you won't dedicate precious minutes of your lifespan to a task requested of you.　Click the submit button to check the message, and then copy & send the URL to them!</p>
+  <p style="margin-bottom: 0.75em;">Generate a helpful message saying that you won't dedicate precious minutes of your lifespan to a task requested of you.　Click the submit button to check the message, and then copy & send the URL to them!</p>
   <br>
 
   <input type="text" id="name" placeholder="your name" />
-  <br>
-  
   <input type="number" id="age" placeholder="your age" />
-  <br>
-  
-  <input type="text" id="addressee" placeholder="your addressee's name" />
-  <br>
-  
+  <input type="text" id="addressee" placeholder="your addressee's name" />  
+
   <input type="text" id="myInput" list="data" placeholder="your country"/>
   <datalist id="data"></datalist>
-  <br>
   
   <input type="text" id="task" placeholder="your task" />
-  <br>
 
   <button onclick="sendInfo()">Preview</button>
-  <br><br>
+  
+  <br><p style="font-size: 0.7em; text-align: right !important;">Made by <a style="color:rgb(54, 91, 201); text-decoration-style: dotted;" href="https://callumbeaney.github.io">Callum Beaney</a></p>
+  <br>
+  
 </body>
 <script src="data.js"></script>
 <script src="index.js"></script>
